FILE(GLOB italc_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
FILE(GLOB italc_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB italc_UI ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/*.ui)
SET(QRC_FILE ${CMAKE_CURRENT_SOURCE_DIR}/italc.qrc)
QT4_WRAP_CPP(italc_MOC_out ${italc_INCLUDES})
QT4_WRAP_UI(italc_UIC_out ${italc_UI})
QT4_ADD_RESOURCES(italc_RCC_out ${QRC_FILE})
QT4_TRANSLATIONS_FOR_QRC(${QRC_FILE} ${italc_SOURCES} ${italc_INCLUDES})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/src)
LINK_LIBRARIES(ItalcCore)
ADD_EXECUTABLE(italc ${italc_UIC_out} ${italc_SOURCES} ${italc_INCLUDES} ${italc_MOC_out} ${italc_RCC_out})

INSTALL(TARGETS italc RUNTIME DESTINATION bin)

